feat: Listen to xBlock interaction events

--- a/cms/static/sass/course-unit-mfe-iframe-bundle.scss
+++ b/cms/static/sass/course-unit-mfe-iframe-bundle.scss
@@ -53,6 +53,7 @@
         background-color: $primary;
         color: $white;
         border-color: $transparent;
+        color: $white;
       }
 
       &:focus {
@@ -655,4 +656,8 @@ select {
 
 .wrapper-comp-setting.metadata-list-enum .action.setting-clear.active {
   margin-top: 0;
+}
+
+.wrapper-xblock .xblock-header-primary .header-actions .wrapper-nav-sub {
+  z-index: 15;
 }
