refactor: some refactoring

--- a/cms/static/sass/course-unit-mfe-iframe-bundle.scss
+++ b/cms/static/sass/course-unit-mfe-iframe-bundle.scss
@@ -659,5 +659,5 @@ select {
 }
 
 .wrapper-xblock .xblock-header-primary .header-actions .wrapper-nav-sub {
-  z-index: 15;
+  z-index: $zindex-dropdown;
 }
