refactor: changed bg color

--- a/cms/static/sass/course-unit-mfe-iframe-bundle.scss
+++ b/cms/static/sass/course-unit-mfe-iframe-bundle.scss
@@ -328,6 +328,7 @@
 
 .wrapper-content.wrapper {
   padding: $baseline / 4;
+  background-color: #f8f7f6;
 }
 
 .btn-default.action-edit.title-edit-button {
