--- a/common/templates/xblock_v2/xblock_iframe.html
+++ b/common/templates/xblock_v2/xblock_iframe.html
@@ -322,5 +322,12 @@
 
     window.addEventListener('load', blockFrameJS);
   </script>
+  <script>
+    // Used when rendering the `studio_view`, in order to intercept and handle the cancel button event
+    document.querySelector('.cancel-button').addEventListener('click', function() {
+      event.preventDefault();
+      window.parent.postMessage('cancel-clicked', '*');
+    });
+  </script>
 </body>
 </html>
