--- a/common/templates/xblock_v2/xblock_iframe.html
+++ b/common/templates/xblock_v2/xblock_iframe.html
@@ -265,6 +265,18 @@
                 const blockJS = { element };
                 callback(blockJS);
             }
+
+            if ('{{ view_name | safe }}' === 'studio_view') {
+              // Used when rendering the `studio_view`, in order to intercept and handle the cancel/save button event
+              document.querySelector('.cancel-button').addEventListener('click', function() {
+                event.preventDefault();
+                window.parent.postMessage('cancel-clicked', '*');
+              });
+              document.querySelector('.save-button').addEventListener('click', function() {
+                event.preventDefault();
+                window.parent.postMessage('save-clicked', '*');
+              });
+            }
         }
 
         // Recursively initialize the JavaScript code of each XBlock:
@@ -328,17 +340,6 @@
     }
 
     window.addEventListener('load', blockFrameJS);
-  </script>
-  <script>
-    // Used when rendering the `studio_view`, in order to intercept and handle the cancel button event
-    document.querySelector('.cancel-button').addEventListener('click', function() {
-      event.preventDefault();
-      window.parent.postMessage('cancel-clicked', '*');
-    });
-    document.querySelector('.save-button').addEventListener('click', function() {
-      event.preventDefault();
-      window.parent.postMessage('save-clicked', '*');
-    });
   </script>
 </body>
 </html>
