--- a/common/templates/xblock_v2/xblock_iframe.html
+++ b/common/templates/xblock_v2/xblock_iframe.html
@@ -215,12 +215,15 @@
                 }
                 return url;
             },
-            notify: () => {
-              /** 
-               * Used in `studio_view`
-               * 
-               * TODO: Do nothing for now
-               *  **/
+            notify: (eventName, data) => {
+                /** 
+                 * Used in `studio_view` to notify events and errors
+                 **/
+                if (eventName == 'save' && data.state == 'end') {
+                  window.parent.postMessage('save-end', '*');
+                } else if (eventName == 'error') {
+                  window.parent.postMessage('error', '*');
+                }
             }
         };
 
@@ -267,14 +270,10 @@
             }
 
             if ('{{ view_name | safe }}' === 'studio_view') {
-              // Used when rendering the `studio_view`, in order to intercept and handle the cancel/save button event
+              // Used when rendering the `studio_view`, in order to intercept and handle the cancel button event
               document.querySelector('.cancel-button').addEventListener('click', function() {
                 event.preventDefault();
                 window.parent.postMessage('cancel-clicked', '*');
-              });
-              document.querySelector('.save-button').addEventListener('click', function() {
-                event.preventDefault();
-                window.parent.postMessage('save-clicked', '*');
               });
             }
         }
