feat!: updating import api, now it will download course for url also.

--- a/cms/templates/widgets/header.html
+++ b/cms/templates/widgets/header.html
@@ -260,7 +260,7 @@
                   </li>
                   % endif
                       <li class="nav-item nav-course-tools-export-git">
-                        <a href="${reverse('course_templates', args=[str(course_key)])}">${_("Course Templates")}</a>
+                        <a href="${reverse('custom_course_templates', args=[str(course_key)])}">${_("Course Templates")}</a>
                       </li>
                   <li class="nav-item nav-course-tools-checklists">
                     <a href="${checklists_url}">${_("Checklists")}</a>
