--- a/common/templates/xblock_v2/xblock_iframe.html
+++ b/common/templates/xblock_v2/xblock_iframe.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
-<html>
+<!-- Set the height of the iframe to 100% of the viewport height to avoid an extra scrollbar -->
+<html style="height: 100vh;">
 <head>
   <!-- Open links in a new tab, not this iframe -->
   <base target="_blank">
