--- a/xmodule/static/css-builtin-blocks/HtmlBlockDisplay.css
+++ b/xmodule/static/css-builtin-blocks/HtmlBlockDisplay.css
@@ -11,7 +11,7 @@
 .xmodule_display.xmodule_CourseInfoBlock h1,
 .xmodule_display.xmodule_HtmlBlock h1,
 .xmodule_display.xmodule_StaticTabBlock h1 {
-    color: var(--body-color);
+    color: var(--body-color, #313131);
     font: normal 2em/1.4em var(--font-family-sans-serif);
     letter-spacing: 1px;
     margin: 0 0 1.416em;
@@ -83,7 +83,7 @@
     margin-bottom: 1.416em;
     font-size: 1em;
     line-height: 1.6em !important;
-    color: var(--body-color);
+    color: var(--body-color, #313131);
 }
 
 .xmodule_display.xmodule_AboutBlock em,
@@ -162,7 +162,7 @@
 .xmodule_display.xmodule_StaticTabBlock ul {
     padding: 0 0 0 1em;
     margin: 1em 0;
-    color: var(--body-color);
+    color: var(--body-color, #313131);
 }
 
 .xmodule_display.xmodule_AboutBlock ol li,
@@ -210,7 +210,7 @@
 .xmodule_display.xmodule_StaticTabBlock a:hover,
 .xmodule_display.xmodule_StaticTabBlock a:active,
 .xmodule_display.xmodule_StaticTabBlock a:focus {
-    color: var(--blue);
+    color: var(--blue, #0075b4);
 }
 
 .xmodule_display.xmodule_AboutBlock img,
@@ -226,7 +226,7 @@
 .xmodule_display.xmodule_HtmlBlock pre,
 .xmodule_display.xmodule_StaticTabBlock pre {
     margin: 1em 0;
-    color: var(--body-color);
+    color: var(--body-color, #313131);
     font-family: monospace, serif;
     font-size: 1em;
     white-space: pre-wrap;
@@ -237,7 +237,7 @@
 .xmodule_display.xmodule_CourseInfoBlock code,
 .xmodule_display.xmodule_HtmlBlock code,
 .xmodule_display.xmodule_StaticTabBlock code {
-    color: var(--body-color);
+    color: var(--body-color, #313131);
     font-family: monospace, serif;
     background: none;
     padding: 0;
@@ -263,7 +263,7 @@
 .xmodule_display.xmodule_StaticTabBlock table th {
     margin: var(--baseline, 20px) 0;
     padding: calc((var(--baseline, 20px) / 2));
-    border: 1px solid var(--gray-l3);
+    border: 1px solid var(--gray-l3, #c8c8c8);
     font-size: 14px;
 }
 
@@ -317,9 +317,9 @@
     padding: calc((var(--baseline, 20px) / 4)) 7px;
     border-radius: 5px;
     opacity: 0.9;
-    background: var(--white);
-    color: var(--black);
-    border: 2px solid var(--black);
+    background: var(--white, #fff);
+    color: var(--black, #000);
+    border: 2px solid var(--black, #000);
 }
 
 .xmodule_display.xmodule_AboutBlock .wrapper-modal-image .modal-ui-icon .label,
