--- a/xmodule/static/css-builtin-blocks/VideoBlockEditor.css
+++ b/xmodule/static/css-builtin-blocks/VideoBlockEditor.css
@@ -64,9 +64,9 @@
     padding: 18px var(--baseline, 20px);
     top: 0 !important;
     right: 0;
-    background-color: var(--blue);
-    border-bottom: 1px solid var(--blue-d2);
-    color: var(--white);
+    background-color: var(--blue, #0075b4);
+    border-bottom: 1px solid var(--blue-d2, #00466c);
+    color: var(--white, #fff);
 }
 
 .xmodule_edit.xmodule_VideoBlock .editor-with-tabs .edit-header .component-name {
@@ -74,7 +74,7 @@
     top: 0;
     left: 0;
     width: 50%;
-    color: var(--white);
+    color: var(--white, #fff);
     font-weight: 600;
 }
 
@@ -82,7 +82,7 @@
     display: inline-block;
     margin-right: calc((var(--baseline, 20px) / 4));
     font-weight: 400;
-    color: var(--white);
+    color: var(--white, #fff);
 }
 
 .xmodule_edit.xmodule_VideoBlock .editor-with-tabs .edit-header .editor-tabs {
@@ -104,21 +104,21 @@
     background-color: rgba(255, 255, 255, 0.3);
     background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0));
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0));
-    border: 1px solid var(--blue-d1);
+    border: 1px solid var(--blue-d1, #005e90);
     border-radius: 3px;
     padding: calc((var(--baseline, 20px) / 4)) var(--baseline, 20px);
-    background-color: var(--blue);
+    background-color: var(--blue, #0075b4);
     font-weight: bold;
-    color: var(--white);
+    color: var(--white, #fff);
 }
 
 .xmodule_edit.xmodule_VideoBlock .editor-with-tabs .edit-header .editor-tabs .inner_tab_wrap a.tab.current {
-    background-color: var(--blue);
-    background-image: -webkit-linear-gradient(var(--blue), var(--blue));
-    background-image: linear-gradient(to, var(--blue));
-    color: var(--blue-d1);
+    background-color: var(--blue, #0075b4);
+    background-image: -webkit-linear-gradient(var(--blue, #0075b4), var(--blue, #0075b4));
+    background-image: linear-gradient(to, var(--blue, #0075b4));
+    color: var(--blue-d1, #005e90);
     box-shadow: inset 0 1px 2px 1px var(--shadow-l1);
-    background-color: var(--blue-d4);
+    background-color: var(--blue-d4, #001724);
     cursor: default;
 }
 
@@ -154,7 +154,7 @@
 }
 
 .xmodule_edit.xmodule_VideoBlock .component-tab {
-    background: var(--white);
+    background: var(--white, #fff);
     position: relative;
     border-top: 1px solid #8891a1;
 }
