chore: Adds fallback values of more colors

--- a/xmodule/static/css-builtin-blocks/ProblemBlockEditor.css
+++ b/xmodule/static/css-builtin-blocks/ProblemBlockEditor.css
@@ -101,9 +101,9 @@
     padding: 7px 20px 3px;
     border: 1px solid #a5aaaf;
     border-radius: 3px 3px 0 0;
-    background-color: var(--transparent);
-    background-image: -webkit-linear-gradient(top, var(--transparent) 87%, rgba(0, 0, 0, 0.06));
-    background-image: linear-gradient(to bottom, var(--transparent) 87%, rgba(0, 0, 0, 0.06));
+    background-color: var(--transparent, transparent);
+    background-image: -webkit-linear-gradient(top, var(--transparent, transparent) 87%, rgba(0, 0, 0, 0.06));
+    background-image: linear-gradient(to bottom, var(--transparent, transparent) 87%, rgba(0, 0, 0, 0.06));
     background-color: #e5ecf3;
     font-size: 13px;
     color: #3c3c3c;
