--- a/common/templates/xblock_v2/xblock_iframe.html
+++ b/common/templates/xblock_v2/xblock_iframe.html
@@ -35,23 +35,43 @@
   <script type="text/javascript" src="{{ lms_root_url }}/static/common/js/vendor/require.js"></script>
   <script type="text/javascript" src="{{ lms_root_url }}/static/js/RequireJS-namespace-undefine.js"></script>
   <script>
-    // The minimal RequireJS configuration required for common LMS building XBlock types to work:
+    // The minimal RequireJS configuration required for common LMS and CMS building XBlock types to work:
+    require = require || RequireJS.require;
+    define = define || RequireJS.define;
     (function (require, define) {
-        require.config({
-            baseUrl: "{{ lms_root_url }}/static/",
-            paths: {
-                accessibility: 'js/src/accessibility_tools',
-                draggabilly: 'js/vendor/draggabilly',
-                hls: 'common/js/vendor/hls',
-                moment: 'common/js/vendor/moment-with-locales',
-                HtmlUtils: 'edx-ui-toolkit/js/utils/html-utils',
-            },
-        });
+        if ('{{ view_name | safe }}' === 'studio_view') {
+          // Call `require-config.js` of the CMS
+          var script = document.createElement('script');
+          script.type = 'text/javascript';
+          script.src = "{{ cms_root_url }}/static/studio/cms/js/require-config.js";
+          document.head.appendChild(script);
+
+          require.config({
+              baseUrl: "{{ cms_root_url }}/static/studio",
+              paths: {
+                  accessibility: 'js/src/accessibility_tools',
+                  draggabilly: 'js/vendor/draggabilly',
+                  hls: 'common/js/vendor/hls',
+                  moment: 'common/js/vendor/moment-with-locales',
+              },
+          });
+        } else {
+          require.config({
+              baseUrl: "{{ lms_root_url }}/static/",
+              paths: {
+                  accessibility: 'js/src/accessibility_tools',
+                  draggabilly: 'js/vendor/draggabilly',
+                  hls: 'common/js/vendor/hls',
+                  moment: 'common/js/vendor/moment-with-locales',
+                  HtmlUtils: 'edx-ui-toolkit/js/utils/html-utils',
+              },
+          });
+        }
         define('gettext', [], function() { return window.gettext; });
         define('jquery', [], function() { return window.jQuery; });
         define('jquery-migrate', [], function() { return window.jQuery; });
         define('underscore', [], function() { return window._; });
-    }).call(this, require || RequireJS.require, define || RequireJS.define);
+    }).call(this, require, define);
   </script>
   <!-- edX HTML Utils requires GlobalLoader -->
   <script type="text/javascript" src="{{ lms_root_url }}/static/edx-ui-toolkit/js/utils/global-loader.js"></script>
@@ -269,6 +289,20 @@
                 // const passElement = isStudioView && (window as any).$ ? (window as any).$(element) : element;
                 const blockJS = new InitFunction(runtime, element, data) || {};
                 blockJS.element = element;
+
+                if (data['xmodule-type'] == 'MetadataOnlyEditingDescriptor') {
+                  // The xmodule type `MetadataOnlyEditingDescriptor` renders a `<div>` with
+                  // the block metadata in the `data-metadata` attribute. But is necessary
+                  // to call `XBlockEditorView.xblockReady()` to run the scripts to build the
+                  // editor using the metadata.
+                  require(['{{ cms_root_url }}/static/studio/js/views/xblock_editor.js'], function(XBlockEditorView) {
+                    var editorView = new XBlockEditorView({
+                      el: element
+                    });
+                    editorView.xblockReady(blockJS);
+                  });
+                }
+
                 callback(blockJS);
             } else {
                 const blockJS = { element };
