--- a/cms/static/sass/elements/_header.scss
+++ b/cms/static/sass/elements/_header.scss
@@ -388,8 +388,7 @@ body.course.view-export-git .nav-course-tools-export-git,
 body.course.view-team .nav-library-settings .title,
 body.course.view-team .nav-library-settings-team,
 body.course.view-checklists .nav-course-tools .title,
-body.course.view-checklists .nav-course-tools-checklists,
-.nav-course-tools-optimizer {
+body.course.view-checklists .nav-course-tools-checklists {
   color: theme-color("primary");
 
   a {
