fix(wip): add openassessment iframe editor css

--- a/cms/static/sass/course-unit-mfe-iframe-bundle.scss
+++ b/cms/static/sass/course-unit-mfe-iframe-bundle.scss
@@ -1,3 +1,8 @@
+@import '_builtin-block-variables';
+@import 'bourbon/bourbon'; // lib - bourbon
+@import 'neat/neat'; // lib - Neat
+@import 'vendor/bi-app/bi-app-ltr'; // set the layout for left to right languages
+@import 'build-v1'; // shared app style assets/rendering
 @import 'cms/theme/variables-v1';
 @import 'elements/course-unit-mfe-iframe';
 
@@ -427,6 +432,9 @@ html {
         }
       }
     }
+
+    // For openassessment xblock editor
+    @import 'iframe-editors/oa';
 
     .xblock-v1-studio_view {
       height: 100%;
