fix: leave space for close button

--- a/cms/static/sass/course-unit-mfe-iframe-bundle.scss
+++ b/cms/static/sass/course-unit-mfe-iframe-bundle.scss
@@ -435,6 +435,7 @@ html {
 
     // For openassessment xblock editor. Copied from edx-ora2 repo.
     @import 'iframe-editors/oa';
+
     // openassessment xblock mods for mfe iframe
     .openassessment_editor_buttons.xblock-actions {
       padding: ($baseline*0.75) 2% ($baseline/2) 2%;
@@ -461,8 +462,10 @@ html {
       // make room for tabs above after shifting everything up due to action buttons
       height: calc(100% - 112px);
     }
+
     #openassessment-editor #openassessment_editor_header {
       padding: 10px;
+      padding-right: 50px; // make space for close button
     }
 
     .xblock-v1-studio_view {
